Fixing the contact spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -204,16 +204,16 @@ a:hover {
   height: 800px;
 }
 .leftycontact{
-  background-color: black;
+  background-color: #2c2a2a;
   height: 400px;
 }
 .rightycontact{
   background-color: white;
   height: 400px;
 }
-.paddingremove{
-  padding-left: 0px;
-  padding-right: 0px;
+
+.dark-background{
+  background-color: #2c2a2a;
 }
 
 .underline{
@@ -240,6 +240,13 @@ a:hover {
   outline: none;
   outline-style: none;
 }
+
+@media only screen and (max-width: 992px) {
+    .input-style-subject{
+        width: 300px;
+    }
+}
+
 input[type=text] {
     background: transparent;
     border: none;
